<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.KeyboardFragment">
    <TableRow
        android:id="@+id/row_1"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/letter_11"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_11">
        </TextView>
        <TextView
            android:id="@+id/letter_24"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_24">
        </TextView>
        <TextView
            android:id="@+id/letter_21"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_21">
        </TextView>
        <TextView
            android:id="@+id/letter_12"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_12">
        </TextView>
        <TextView
            android:id="@+id/letter_6"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_6">
        </TextView>
        <TextView
            android:id="@+id/letter_15"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_15">
        </TextView>
        <TextView
            android:id="@+id/letter_4"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_4">
        </TextView>
        <TextView
            android:id="@+id/letter_26"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_26">
        </TextView>
        <TextView
            android:id="@+id/letter_27"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_27">
        </TextView>
        <TextView
            android:id="@+id/letter_9"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_9">
        </TextView>
        <TextView
            android:id="@+id/letter_23"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_23">
        </TextView>
    </TableRow>
    <TableRow
        android:id="@+id/row_2"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/letter_22"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_22">
        </TextView>
        <TextView
            android:id="@+id/letter_29"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_29">
        </TextView>
        <TextView
            android:id="@+id/letter_3"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_3">
        </TextView>
        <TextView
            android:id="@+id/letter_1"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_1">
        </TextView>
        <TextView
            android:id="@+id/letter_17"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_17">
        </TextView>
        <TextView
            android:id="@+id/letter_18"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_18">
        </TextView>
        <TextView
            android:id="@+id/letter_16"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_16">
        </TextView>
        <TextView
            android:id="@+id/letter_13"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_13">
        </TextView>
        <TextView
            android:id="@+id/letter_5"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_5">
        </TextView>
        <TextView
            android:id="@+id/letter_8"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_8">
        </TextView>
        <TextView
            android:id="@+id/letter_31"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_31">
        </TextView>
    </TableRow>
    <TableRow
        android:id="@+id/row_3"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/letter_7"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_7">
        </TextView>
        <TextView
            android:id="@+id/letter_33"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_33">
        </TextView>
        <TextView
            android:id="@+id/letter_25"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_25">
        </TextView>
        <TextView
            android:id="@+id/letter_19"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_19">
        </TextView>
        <TextView
            android:id="@+id/letter_14"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_14">
        </TextView>
        <TextView
            android:id="@+id/letter_10"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_10">
        </TextView>
        <TextView
            android:id="@+id/letter_20"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_20">
        </TextView>
        <TextView
            android:id="@+id/letter_30"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_30">
        </TextView>
        <TextView
            android:id="@+id/letter_2"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_2">
        </TextView>
        <TextView
            android:id="@+id/letter_32"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_32">
        </TextView>
        <TextView
            android:id="@+id/letter_28"
            android:layout_height="@dimen/keyboard_cell_size"
            android:layout_width="@dimen/keyboard_cell_size"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            style="@style/keyboard_cell_text_default"
            android:background="@drawable/keyboard_cell_default"
            android:text="@string/letter_28">
        </TextView>
    </TableRow>

</TableLayout>