<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background"
    tools:context=".ui.StartFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo_200dp">
    </ImageView>
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common"
        style="@style/welcome_title"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:background="@null"
        android:text="@string/ne_vorobey_welcome">
    </TextView>
    <TextView
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common"
        style="@style/welcome_description"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:background="@null"
        android:text="@string/ne_vorobey_descr">
    </TextView>
    <TextView
        android:id="@+id/choose_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common"
        app:layout_constraintTop_toBottomOf="@id/description_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:background="@null"
        style="@style/choose_level"
        android:text="@string/choose_level">
    </TextView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/easy_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        app:layout_constraintTop_toBottomOf="@id/choose_word"
        app:layout_constraintBottom_toTopOf="@id/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/medium_container">
        <ImageView
            android:id="@+id/easy_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_easy_level_48dp">
        </ImageView>
        <TextView
            android:id="@+id/easy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common"
            app:layout_constraintTop_toBottomOf="@id/easy_level"
            app:layout_constraintStart_toStartOf="@id/easy_level"
            app:layout_constraintEnd_toEndOf="@id/easy_level"
            style="@style/easy_level"
            android:background="@null"
            android:text="@string/easy_4">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/medium_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        app:layout_constraintTop_toTopOf="@id/easy_container"
        app:layout_constraintBottom_toBottomOf="@id/easy_container"
        app:layout_constraintStart_toEndOf="@id/easy_container"
        app:layout_constraintEnd_toStartOf="@id/hard_container"
        >
        <ImageView
            android:id="@+id/medium_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_medium_level_48dp">
        </ImageView>
        <TextView
            android:id="@+id/medium_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common"
            app:layout_constraintTop_toBottomOf="@id/medium_level"
            app:layout_constraintStart_toStartOf="@id/medium_level"
            app:layout_constraintEnd_toEndOf="@id/medium_level"
            style="@style/medium_level"
            android:background="@null"
            android:text="@string/medium_5">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hard_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        app:layout_constraintTop_toTopOf="@id/easy_container"
        app:layout_constraintBottom_toBottomOf="@id/easy_container"

        app:layout_constraintStart_toEndOf="@id/medium_container"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/hard_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_hard_level_48dp">
        </ImageView>
        <TextView
            android:id="@+id/hard_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common"
            app:layout_constraintTop_toBottomOf="@id/hard_level"
            app:layout_constraintStart_toStartOf="@id/hard_level"
            app:layout_constraintEnd_toEndOf="@id/hard_level"
            android:background="@null"
            style="@style/hard_level"
            android:text="@string/hard_6">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_start_button_enabled_disabled_48dp">

    </ImageView>




</androidx.constraintlayout.widget.ConstraintLayout>