<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background"
    tools:context=".ui.StartFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo_200dp">
    </ImageView>
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common"
        style="@style/welcome_title"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:background="@null"
        android:text="@string/loose_game">
    </TextView>

    <TextView
        android:id="@+id/choose_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:background="@null"
        style="@style/choose_level"
        android:text="@string/choose_next_step">
    </TextView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/try_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        app:layout_constraintTop_toBottomOf="@id/choose_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/exit_container">
        <ImageView
            android:id="@+id/try_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_reload_button_48dp">
        </ImageView>
        <TextView
            android:id="@+id/try_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common"
            app:layout_constraintTop_toBottomOf="@id/try_img"
            app:layout_constraintStart_toStartOf="@id/try_img"
            app:layout_constraintEnd_toEndOf="@id/try_img"
            style="@style/easy_level"
            android:background="@null"
            android:text="@string/retry_game">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/exit_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        app:layout_constraintTop_toTopOf="@id/try_container"
        app:layout_constraintBottom_toBottomOf="@id/try_container"
        app:layout_constraintStart_toEndOf="@id/try_container"


        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/exit_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_button_exit_48dp">
        </ImageView>
        <TextView
            android:id="@+id/exit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common"
            app:layout_constraintTop_toBottomOf="@id/exit_img"
            app:layout_constraintStart_toStartOf="@id/exit_img"
            app:layout_constraintEnd_toEndOf="@id/exit_img"
            android:background="@null"
            style="@style/hard_level"
            android:text="@string/exit_game">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.constraintlayout.widget.ConstraintLayout>